--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,15 +12,19 @@ body {
     text-align: center;
 }
 
-.divide {
-    margin-top: 10px;
-    border-top: 1px solid rgb(0, 0, 0);
+
+
+.success {
+    color: green;
+    text-align: center;
 }
 
-#error {
+.error {
     color: red;
     text-align: center;
 }
+
+
 
 
 /* NAVBAR */
@@ -66,7 +70,11 @@ table, td, th {
     border-radius: 3px;
     padding: 5px;
     margin-bottom: 5px;
-    font-size: 14px;
+    font-size: 20px;
+}
+
+td, th {
+   height: 40px;
 }
 
 .delete {
@@ -96,7 +104,7 @@ h1 {text-align: center;}
 }
 
 #psms-logo {
-    height: 50%;
+    margin-top: 10px;
 }
 
 #news {
@@ -132,9 +140,9 @@ h1 {text-align: center;}
 
 /* FORMS */
 
-#news-form {
-    max-width: 30%;
-    border-radius: 10%;
+.table-form {
+    min-width: 50%;
+    border-radius: 5%;
     margin: 10px;
     padding: 30px;
     font-weight: normal;
@@ -142,24 +150,8 @@ h1 {text-align: center;}
     box-shadow: 4px 3px 8px 1px #969696;
 }
 
-#stform {
-    display: flex;
-    justify-content: center;
-}
 
-#fees {
-    width: 10%;
-}
 
-#cselect {
-    border: solid 2px #f0f0f0;
-    border-radius: 3px;
-    padding: 10px;
-    margin-bottom: 5px;
-    font-size: 14px;
-    min-width: 30%;
-    justify-content: center;
-}
 
 .form-field {
     margin-bottom: 5px;
@@ -238,14 +230,6 @@ h1 {text-align: center;}
     margin: 20px 20px;
 }
 
-.exp-label {
-    padding: 10px;
-}
-
-.experience-field {
-    display: flex;
-    justify-content: center;
-}
 
 .edit {
     border: none;
@@ -265,35 +249,6 @@ h1 {text-align: center;}
     background-color: grey;
     color: rgb(255, 255, 255)
 }
-
-.update {
-    border: none;
-    color: rgb(255, 255, 255);
-    background-color: rgb(255, 131, 73);
-    padding: 10px;
-    margin: 10px;
-    box-shadow: 2px rgb(0, 0, 0);
-}
-
-.update:hover {
-    background-color: rgb(255, 81, 0);
-    color: rgb(255, 255, 255);
-}
-
-.update:disabled {
-    background-color: grey;
-    color: rgb(255, 255, 255)
-}
-
-.selector {
-    border: solid 2px #f0f0f0;
-    border-radius: 3px;
-    padding: 5px;
-    margin-bottom: 5px;
-    font-size: 14px;
-    width: 50%;
-}
-
 
 
 
